completed navbar and carousel section

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="style/index.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="style/index.css">
     <title>jCode - Code More</title>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <!-- ---------------------- nav ---------------------------- -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <a class="navbar-brand" href="#">jCode</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,10 +52,67 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
     </nav>
+
+
+    <!-- -------------------------------- carousel ------------------------------------ -->
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="image/carousel1-768.jpeg">
+                    <img src="image/carousel-1.jpeg" class="d-block w-100" alt="...">
+                </picture>
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>Welcome to jCode</h2>
+                    <p>Design, Development and Technology News.</p>
+                    <button class="btn btn-outline-primary text-white">Get started</button>
+                    <button class="btn btn-primary">Support us</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="image/carousel2-768.jpeg">
+                    <img src="image/carousel-2.jpeg" class="d-block w-100" alt="...">
+                </picture>
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>The Coding Blog</h2>
+                    <p>Design, Development and Technology News.</p>
+                    <button class="btn btn-outline-primary text-white">Get started</button>
+                    <button class="btn btn-primary">Support us</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="image/carousel3-768.jpeg">
+                    <img src="image/carousel-3.jpeg" class="d-block w-100" alt="...">
+                </picture>
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>Let's Learn Some Designing</h2>
+                    <p>Design, Development and Technology News.</p>
+                    <button class="btn btn-outline-primary text-white">Get started</button>
+                    <button class="btn btn-primary">Support us</button>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
 
 
 
