--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style/index.css">
-    <title>jCode - Code More</title>
+    <title>jCode Blogs - Learn More</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <!-- ---------------------- nav ---------------------------- -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="#">jCode</a>
+        <a class="navbar-brand" href="#">jCode Blogs</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0 text-white" type="submit">Search</button>
             </form>
         </div>
     </nav>
@@ -69,7 +69,7 @@
             <div class="carousel-item active">
                 <picture>
                     <source media="(max-width: 768px)" srcset="image/carousel1-768.jpeg">
-                    <img src="image/carousel-1.jpeg" class="d-block w-100" alt="...">
+                    <img src="image/carousel-1.svg" class="d-block w-100" alt="...">
                 </picture>
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Welcome to jCode</h2>
@@ -81,7 +81,7 @@
             <div class="carousel-item">
                 <picture>
                     <source media="(max-width: 768px)" srcset="image/carousel2-768.jpeg">
-                    <img src="image/carousel-2.jpeg" class="d-block w-100" alt="...">
+                    <img src="image/carousel-2.svg" class="d-block w-100" alt="...">
                 </picture>
                 <div class="carousel-caption d-none d-md-block">
                     <h2>The Coding Blog</h2>
@@ -93,7 +93,7 @@
             <div class="carousel-item">
                 <picture>
                     <source media="(max-width: 768px)" srcset="image/carousel3-768.jpeg">
-                    <img src="image/carousel-3.jpeg" class="d-block w-100" alt="...">
+                    <img src="image/carousel-3.svg" class="d-block w-100" alt="...">
                 </picture>
                 <div class="carousel-caption d-none d-md-block">
                     <h2>Let's Learn Some Designing</h2>
@@ -112,6 +112,99 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
+
+    <!-- --------------------------- post cards -------------------------- -->
+    <!-- ------------------------- row 1 ---------------------- -->
+    <div class="container my-4">
+        <div class="row mb-2">
+            <div class="col-md-6">
+                <div
+                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <strong class="d-inline-block mb-2 text-primary">Tech</strong>
+                        <h3 class="mb-0">Update: Bootstrap 5</h3>
+                        <div class="mb-1 text-muted">Jun 17, 2020</div>
+                        <p class="card-text mb-auto">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dicta fugiat sit asperiores
+                            laborum, labore expedita adipisci quod possimus assumenda eaque, sequi suscipit nesciunt?
+                            Aliquid unde sint placeat temporibus quis?
+                        </p>
+                        <a href="#" class="stretched-link">Continue reading</a>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <img class="bd-placeholder-img" width="200" height="250" src="image/bootstrap.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div
+                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <strong class="d-inline-block mb-2 text-success">Design</strong>
+                        <h3 class="mb-0">Design Principles</h3>
+                        <div class="mb-1 text-muted">Nov 11, 2019</div>
+                        <p class="mb-auto">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptas tempore dicta
+                            unde laborum quos deleniti, a corrupti asperiores ratione iusto ullam eaque porro
+                            accusantium aperiam reiciendis architecto, omnis vel.
+                        </p>
+                        <a href="#" class="stretched-link">Continue reading</a>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <img class="bd-placeholder-img" width="200" height="250" src="image/design.svg" alt="designing image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ---------------------- row 2 ---------------------- -->
+    <div class="container">
+        <div class="row mb-2">
+            <div class="col-md-6">
+                <div
+                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <strong class="d-inline-block mb-2 text-primary">Tech</strong>
+                        <h3 class="mb-0">Django 3.0</h3>
+                        <div class="mb-1 text-muted">Dec 2, 2019</div>
+                        <p class="card-text mb-auto">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dicta fugiat sit asperiores
+                            laborum, labore expedita adipisci quod possimus assumenda eaque, sequi suscipit nesciunt?
+                            Aliquid unde sint placeat temporibus quis?
+                        </p>
+                        <a href="#" class="stretched-link">Continue reading</a>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <img class="bd-placeholder-img" width="200" height="250" src="image/django.svg" alt="">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div
+                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                    <div class="col p-4 d-flex flex-column position-static">
+                        <strong class="d-inline-block mb-2 text-success">Programming</strong>
+                        <h3 class="mb-0">Update: Python 3</h3>
+                        <div class="mb-1 text-muted">3 December, 2008</div>
+                        <p class="mb-auto">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptas tempore dicta
+                            unde laborum quos deleniti, a corrupti asperiores ratione iusto ullam eaque porro
+                            accusantium aperiam reiciendis architecto, omnis vel.
+                        </p>
+                        <a href="#" class="stretched-link">Continue reading</a>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <img class="bd-placeholder-img" width="200" height="250" src="image/python.svg" alt="python logo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
