added header title, links and carousel section and hot topics cards

--- a/index.html
+++ b/index.html
@@ -17,45 +17,32 @@
 
 
     <!-- ---------------------- nav ---------------------------- -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="#">jCode Blogs</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Topics
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Web Design</a>
-                        <a class="dropdown-item" href="#">Web Technology</a>
-                        <a class="dropdown-item" href="#">Programming</a>
-                        <a class="dropdown-item" href="#">Logo Design</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Support us</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-primary my-2 my-sm-0 text-white" type="submit">Search</button>
-            </form>
+    <header>
+        <div class="top-heading">
+            <p>Subscribe</p>
+            <h1>jCode Blogs</h1>
+            <div class="search-signup-button">
+                <img src="" alt="" class="search-icon">
+                <button class="btn btn-outline-primary">Sign up</button>
+            </div>
         </div>
-    </nav>
+        <hr>
+        <nav>
+            <p>World</p>
+            <p>Technology</p>
+            <p>Design</p>
+            <p>Culture</p>
+            <p>Business</p>
+            <p>Politics</p>
+            <p>Opinion</p>
+            <p>Science</p>
+            <p>Health</p>
+            <p>Style</p>
+            <p>Travel</p>
+        </nav>
+
+
+    </header>
 
 
     <!-- -------------------------------- carousel ------------------------------------ -->
@@ -159,7 +146,6 @@
             </div>
         </div>
     </div>
-
     <!-- ---------------------- row 2 ---------------------- -->
     <div class="container">
         <div class="row mb-2">
@@ -206,6 +192,7 @@
     </div>
 
 
+    
 
 
 
