made header responsive

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <header>
         <div class="top-heading">
             <p>Subscribe</p>
-            <h1>jCode Blogs</h1>
+            <h1>jCode <br class="jcode-blogs-break"> Blogs</h1>
             <div class="search-signup-button">
-                <img src="" alt="" class="search-icon">
-                <button class="btn btn-outline-primary">Sign up</button>
+                <img src="image/search.png" alt="" class="search-icon">
+                <button class="btn btn-outline-secondary">Sign up</button>
             </div>
         </div>
         <hr>
@@ -39,6 +39,8 @@
             <p>Health</p>
             <p>Style</p>
             <p>Travel</p>
+            <img src="image/left.svg" class="left-angle" alt="">
+            <img src="image/right.svg" class="right-angle" alt="">
         </nav>
 
 
