added recent topics card but excluding data

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body>
 
-
     <!-- ---------------------- nav ---------------------------- -->
     <header>
         <div class="top-heading">
@@ -42,8 +41,6 @@
             <img src="image/left.svg" class="left-angle" alt="">
             <img src="image/right.svg" class="right-angle" alt="">
         </nav>
-
-
     </header>
 
 
@@ -103,7 +100,11 @@
     </div>
 
 
-    <!-- --------------------------- post cards -------------------------- -->
+    <!-- --------------------------- hot topics -------------------------- -->
+    <div class="container">
+        <h2 class="hot-topics heading">Hot Topics</h2>
+        <hr>
+    </div>
     <!-- ------------------------- row 1 ---------------------- -->
     <div class="container my-4">
         <div class="row mb-2">
@@ -194,6 +195,54 @@
     </div>
 
 
+    <!-- ------------------- recent topics ------------------------ -->
+    <div class="container">
+        <h2 class="heading">Recent Topics</h2>
+        <hr>
+        <div class="container my-4">
+            <div class="row mb-2">
+                <div class="col-md-6">
+                    <div
+                        class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-primary">Tech</strong>
+                            <h3 class="mb-0">Django 3.0</h3>
+                            <div class="mb-1 text-muted">Dec 2, 2019</div>
+                            <p class="card-text mb-auto">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dicta fugiat sit asperiores
+                                laborum, labore expedita adipisci quod possimus assumenda eaque, sequi suscipit nesciunt?
+                                Aliquid unde sint placeat temporibus quis?
+                            </p>
+                            <a href="#" class="stretched-link">Continue reading</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <img class="bd-placeholder-img" width="200" height="250" src="image/django.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-md-6">
+                    <div
+                        class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 text-success">Programming</strong>
+                            <h3 class="mb-0">Update: Python 3</h3>
+                            <div class="mb-1 text-muted">3 December, 2008</div>
+                            <p class="mb-auto">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptas tempore dicta
+                                unde laborum quos deleniti, a corrupti asperiores ratione iusto ullam eaque porro
+                                accusantium aperiam reiciendis architecto, omnis vel.
+                            </p>
+                            <a href="#" class="stretched-link">Continue reading</a>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <img class="bd-placeholder-img" width="200" height="250" src="image/python.svg" alt="python logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
 
