added data to recent topics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
+        <link rel="shortcut icon" href="image/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/index.css">
     <title>jCode Blogs - Learn More</title>
 </head>
@@ -19,7 +20,7 @@
     <header>
         <div class="top-heading">
             <p>Subscribe</p>
-            <h1>jCode <br class="jcode-blogs-break"> Blogs</h1>
+            <h1><span id="logo">j</span>Code <br class="jcode-blogs-break"> Blogs</h1>
             <div class="search-signup-button">
                 <img src="image/search.png" alt="" class="search-icon">
                 <button class="btn btn-outline-secondary">Sign up</button>
@@ -178,7 +179,7 @@
                     <div class="col p-4 d-flex flex-column position-static">
                         <strong class="d-inline-block mb-2 text-success">Programming</strong>
                         <h3 class="mb-0">Update: Python 3</h3>
-                        <div class="mb-1 text-muted">3 December, 2008</div>
+                        <div class="mb-1 text-muted">December 3, 2008</div>
                         <p class="mb-auto">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptas tempore dicta
                             unde laborum quos deleniti, a corrupti asperiores ratione iusto ullam eaque porro
@@ -206,13 +207,8 @@
                         class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong class="d-inline-block mb-2 text-primary">Tech</strong>
-                            <h3 class="mb-0">Django 3.0</h3>
-                            <div class="mb-1 text-muted">Dec 2, 2019</div>
-                            <p class="card-text mb-auto">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dicta fugiat sit asperiores
-                                laborum, labore expedita adipisci quod possimus assumenda eaque, sequi suscipit nesciunt?
-                                Aliquid unde sint placeat temporibus quis?
-                            </p>
+                            <h3 class="mb-0">Robots can assist physiotherapy in COVID-19</h3>
+                            <div class="mb-1 text-muted">June 3, 2020</div>
                             <a href="#" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
@@ -225,14 +221,9 @@
                     <div
                         class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
-                            <strong class="d-inline-block mb-2 text-success">Programming</strong>
-                            <h3 class="mb-0">Update: Python 3</h3>
-                            <div class="mb-1 text-muted">3 December, 2008</div>
-                            <p class="mb-auto">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptas tempore dicta
-                                unde laborum quos deleniti, a corrupti asperiores ratione iusto ullam eaque porro
-                                accusantium aperiam reiciendis architecto, omnis vel.
-                            </p>
+                            <strong class="d-inline-block mb-2 text-success">Tech</strong>
+                            <h3 class="mb-0">India takes to homegrown tech to fight COVID-19</h3>
+                            <div class="mb-1 text-muted">April 28, 2020</div>
                             <a href="#" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
