completed recent topics and more topics

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </header>
 
 
+
+
     <!-- -------------------------------- carousel ------------------------------------ -->
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -71,7 +73,7 @@
                     <img src="image/carousel-2.svg" class="d-block w-100" alt="...">
                 </picture>
                 <div class="carousel-caption d-none d-md-block">
-                    <h2>The Coding Blog</h2>
+                    <h2>Let's Learn Some Coding</h2>
                     <p>Design, Development and Technology News.</p>
                     <button class="btn btn-outline-primary text-white">Get started</button>
                     <button class="btn btn-primary">Support us</button>
@@ -99,6 +101,8 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
+
 
 
     <!-- --------------------------- hot topics -------------------------- -->
@@ -196,6 +200,8 @@
     </div>
 
 
+
+
     <!-- ------------------- recent topics ------------------------ -->
     <div class="container">
         <h2 class="heading">Recent Topics</h2>
@@ -212,7 +218,7 @@
                             <a href="#" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" width="200" height="250" src="image/django.svg" alt="">
+                            <img class="bd-placeholder-img" width="200" height="250" src="image/robots.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -227,7 +233,7 @@
                             <a href="#" class="stretched-link">Continue reading</a>
                         </div>
                         <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" width="200" height="250" src="image/python.svg" alt="python logo">
+                            <img class="bd-placeholder-img" width="200" height="250" src="image/india.svg" alt="python logo">
                         </div>
                     </div>
                 </div>
@@ -236,6 +242,68 @@
     </div>
     
 
+
+
+    <!-- ------------------------------- more topics ------------------- -->
+    <div class="container">
+        <h2 class="hot-topics heading">More Topics</h2>
+        <hr>
+    </div>
+
+    <div class="container">
+        <div class="media">
+            <img src="image/pandemic.jpg" class="align-self-start mr-3" alt="...">
+            <div class="media-body">
+              <h5 class="mt-0">The next pandemic</h5>
+              <p class="date">July 13, 2020</p>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+              <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            </div>
+          </div>
+    </div>
+
+    <div class="container">
+        <div class="media">
+            <img src="image/supplier.jpg" class="align-self-start mr-3" alt="...">
+            <div class="media-body">
+              <h5 class="mt-0">India is main supplier of medical goods to UN — report</h5>
+              <p class="date">July 16, 2020</p>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+              <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            </div>
+          </div>
+    </div>
+
+    <div class="container">
+        <div class="media">
+            <img src="image/crust.jpg" class="align-self-start mr-3" alt="...">
+            <div class="media-body">
+              <h5 class="mt-0">New way to locate metals deposits in the earth’s crust</h5>
+              <p class="date">July 8, 2020</p>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+              <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            </div>
+          </div>
+    </div>
+
+    <div class="container">
+        <div class="media">
+            <img src="image/sea.jpg" class="align-self-start mr-3" alt="...">
+            <div class="media-body">
+              <h5 class="mt-0">Sea-level rise may overwhelm mangroves by 2050</h5>
+              <p class="date">June 15, 2020</p>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+              <p>Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            </div>
+          </div>
+    </div>
+
+
+
+
+    <footer>
+
+    </footer>
 
 
 
