testing website with bootstrap

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-        <link rel="shortcut icon" href="image/logo.svg" type="image/x-icon">
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link rel="shortcut icon" href="image/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="style/index.css">
     <title>jCode Blogs - Learn More</title>
 </head>
@@ -250,6 +251,7 @@
         <hr>
     </div>
 
+    <!-- --------------------------------- row 1 ------------------------- -->
     <div class="container">
         <div class="media">
             <img src="image/pandemic.jpg" class="align-self-start mr-3" alt="...">
@@ -262,6 +264,7 @@
           </div>
     </div>
 
+    <!-- --------------------------------- row 2------------------------- -->
     <div class="container">
         <div class="media">
             <img src="image/supplier.jpg" class="align-self-start mr-3" alt="...">
@@ -274,6 +277,7 @@
           </div>
     </div>
 
+    <!-- --------------------------------- row 3 ------------------------- -->
     <div class="container">
         <div class="media">
             <img src="image/crust.jpg" class="align-self-start mr-3" alt="...">
@@ -286,6 +290,7 @@
           </div>
     </div>
 
+    <!-- --------------------------------- row 4 ------------------------- -->
     <div class="container">
         <div class="media">
             <img src="image/sea.jpg" class="align-self-start mr-3" alt="...">
@@ -302,7 +307,48 @@
 
 
     <footer>
+        <hr>
+        <div class="row container">
+            <div class="container col-12 col-md-5">
+                <h4>About us</h4>
+                <p class="about-us-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas ut enim consequuntur, facere hic, minus aut corporis eos atque blanditiis perspiciatis sapiente aspernatur corrupti adipisci. Laudantium nulla illo cum iste.</p>
+                <p class="phone">
+                    <span>
+                        <i class="fas fa-phone"></i>
+                    </span> 
+                    &nbsp; (+977) 9800000000
+                </p>
+                <p class="email">
+                    <span>
+                        <i class="fas fa-envelope-square"></i>
+                    </span> 
+                    &nbsp; example@foodzone.com
+                </p>
+                <p class="location">
+                    <span>
+                        <i class="fas fa-street-view"></i>
+                    </span> 
+                    &nbsp; State no.1, Biratnagar
+                </p>
+            </div>
+            
+            <div class="container col-12 col-md-4 connect-us">
+                <h4 class="connect">Connect with us</h4>
+                <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-google-plus-g"></i></a>
+                <div class="terms">
+                    <a href="#">Terms of use</a><br>
+                    <a href="#">Privacy policy</a><br>
+                    <a href="#">Cookies</a><br>
+                    <a href="#">Accessibility</a><br>
+                    <a href="#">Comments/Feedback</a>
+                </div>
+            </div>
 
+        </div>
     </footer>
 
 
